--- a/RopeysDVD/Pages/Site.Master
+++ b/RopeysDVD/Pages/Site.Master
@@ -6,16 +6,17 @@
     <title>Ropeys DVD</title>
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
+    <!-- Bootstrap 5 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+    <!-- Mastepage template -->
     <script src="https://kit.fontawesome.com/1a3341044a.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
     <link href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css" rel="stylesheet" />
-    <link href="css/Style.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
@@ -23,7 +24,9 @@
     <!-- MC-datepicker -->
     <link href="https://cdn.jsdelivr.net/npm/mc-datepicker/dist/mc-calendar.min.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/mc-datepicker/dist/mc-calendar.min.js"></script>
-
+    <!-- Local Link -->
+    <link href="../css/Style.css" rel="stylesheet" />
+    <script src="../JavaScript/JScript.js"></script>
     <style>
         .card {
             border-radius: 4px;
@@ -41,8 +44,8 @@
         }
     </style>
 </head>
-<body id="body-pd">
-    <header class="header" id="header">
+<body id="body-pd" class="body-pd">
+    <header class="header body-pd" id="header">
         <div class="header_toggle"><i class='bx bx-menu' id="header-toggle"></i></div>
         <div class="header_img">
             <img src="https://i.imgur.com/hczKIze.jpg" alt="">
@@ -50,34 +53,34 @@
     </header>
     
     <form id="form1" runat="server">
-    <div class="l-navbar" id="nav-bar">
+    <div class="l-navbar show" id="nav-bar">
         <nav class="nav">
             <div>
-                <a href="#" class="nav_logo"><i class='bx bx-layer nav_logo-icon'></i><span class="nav_logo-name">Ropey's DVD</span> </a>
+                <a href="Home.aspx" class="nav_logo"><i class='bx bx-layer nav_logo-icon'></i><span class="nav_logo-name">Ropey's DVD</span> </a>
                 <div class="nav_list">
-                    <a href="Home.aspx" class="nav_link active">
-                        <i class='bx bx-grid-alt nav_icon'></i>
-                        <span class="nav_name">Dashboard</span>
-                    </a>
                     <a href="DVDTitle.aspx" class="nav_link">
                         <i class='bx bx-message-square-detail nav_icon'></i>
                         <span class="nav_name">DVD Title</span>
                     </a>
-                    <a href="Actor.aspx" class="nav_link">
-                        <i class='bx bx-user-voice nav_icon'></i>
-                        <span class="nav_name">Actor</span>
+                    <a href="DVDCopy.aspx" class="nav_link">
+                        <i class='bx bxs-disc nav_icon'></i>
+                        <span class="nav_name">DVD Copy</span>
                     </a>
                     <a href="DVDCategory.aspx" class="nav_link">
                         <i class='bx bx-folder nav_icon'></i>
                         <span class="nav_name">DVD Category</span>
                     </a>
-                    <a href="Studio.aspx" class="nav_link">
-                        <i class='bx bxl-visual-studio nav_icon'></i>
-                        <span class="nav_name">Studio</span>
+                    <a href="Actor.aspx" class="nav_link">
+                        <i class='bx bx-user-voice nav_icon'></i>
+                        <span class="nav_name">Actor</span>
                     </a>
                     <a href="Producer.aspx" class="nav_link">
                         <i class='bx bx-user-check nav_icon'></i>
                         <span class="nav_name">Producer</span>
+                    </a>
+                    <a href="Studio.aspx" class="nav_link">
+                        <i class='bx bxl-visual-studio nav_icon'></i>
+                        <span class="nav_name">Studio</span>
                     </a>
                     <a href="Loan.aspx" class="nav_link">
                         <i class='bx bx-money-withdraw nav_icon'></i>
@@ -87,7 +90,7 @@
                         <i class='bx bx-money nav_icon'></i>
                         <span class="nav_name">Loan Type</span>
                     </a>
-                    <a href="Members.aspx" class="nav_link">
+                    <a href="Member.aspx" class="nav_link">
                         <i class='bx bxs-user-account nav_icon'></i>
                         <span class="nav_name">Members</span>
                     </a>
