--- a/RopeysDVD/Pages/Site.Master
+++ b/RopeysDVD/Pages/Site.Master
@@ -98,7 +98,7 @@
                         <i class='bx bxs-user-detail nav_icon'></i>
                         <span class="nav_name">Membership Category</span>
                     </a>
-                    <a href="Users.aspx" class="nav_link">
+                    <a href="User.aspx" class="nav_link">
                         <i class='bx bx-user-circle nav_icon'>
                         </i><span class="nav_name">Users</span>
                     </a>
