--- a/RopeysDVD/Pages/Site.Master
+++ b/RopeysDVD/Pages/Site.Master
@@ -102,6 +102,10 @@
                         <i class='bx bxs-user-detail nav_icon'></i>
                         <span class="nav_name">Membership Category</span>
                     </a>
+                    <a href="OutdatedMovie.aspx" class="nav_link">
+                        <i class='bx bxs-folder-minus nav_icon'></i>
+                        <span class="nav_name">Remove Movies</span>
+                    </a>
                     <a href="ChangePassword.aspx" class="nav_link">
                         <i class='bx bxs-lock-alt nav_icon'>
                         </i><span class="nav_name">Update Profile</span>
